evals/testdata/must-gather/quay-io-openshift-content-sha256-netedge/namespaces/openshift-console/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: console
  namespace: openshift-console
spec:
  host: console-openshift-console.apps.example.com
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: console
    weight: 100
status:
  ingress:
    - host: console-openshift-console.apps.example.com
      routerName: default
      conditions:
        - type: Admitted
          status: "True"
